--- a/index.html
+++ b/index.html
@@ -1,116 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ball Fall Game</title>
-    <style>
-      body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
-}
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simon Says Game</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Simon Says Game</h1>
 
-.game-container {
-    position: relative;
-    width: 300px;
-    height: 400px;
-    border: 1px solid #000;
-}
+    <h2>Press any key to Start the Game</h2>
 
-.paddle {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80px;
-    height: 10px;
-    background-color: #3498db;
-}
+    <div class="btn-container">
+      <div class="line-one">
+        <div class="btn red" type="button" id="red">1</div>
+        <div class="btn yellow" type="button" id="yellow">2</div>
+      </div>
 
-.ball {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 20px;
-    height: 20px;
-    background-color: #e74c3c;
-    border-radius: 50%;
-}
-
-    </style>
-</head>
-<body>
-    <div class="game-container">
-        <div class="paddle"></div>
-        <div class="ball"></div>
+      <div class="line-two">
+        <div class="btn green" type="button" id="green">3</div>
+        <div class="btn purple" type="button" id="purple">4</div>
+      </div>
     </div>
-    <script>
-      const ball = document.querySelector('.ball');
-const paddle = document.querySelector('.paddle');
-const gameContainer = document.querySelector('.game-container');
 
-let isGameOver = false;
+    <button>Start Game</button>
 
-function movePaddle(event) {
-    const x = event.clientX - gameContainer.offsetLeft;
-    const paddleX = x - paddle.clientWidth / 2;
-
-    if (paddleX >= 0 && paddleX <= gameContainer.clientWidth - paddle.clientWidth) {
-        paddle.style.left = paddleX + 'px';
-    }
-}
-
-function checkCollision() {
-    const ballRect = ball.getBoundingClientRect();
-    const paddleRect = paddle.getBoundingClientRect();
-
-    if (
-        ballRect.bottom >= paddleRect.top &&
-        ballRect.bottom <= paddleRect.bottom &&
-        ballRect.left >= paddleRect.left &&
-        ballRect.right <= paddleRect.right
-    ) {
-        gameOver();
-    }
-}
-
-function gameOver() {
-    isGameOver = true;
-    alert('Game Over! Try again.');
-    resetGame();
-}
-
-function resetGame() {
-    ball.style.top = '0';
-    ball.style.left = '50%';
-    paddle.style.left = '50%';
-    isGameOver = false;
-}
-
-function gameLoop() {
-    if (!isGameOver) {
-        const ballTop = ball.offsetTop;
-        ball.style.top = ballTop + 2 + 'px';
-
-        if (ballTop + ball.clientHeight >= gameContainer.clientHeight) {
-            resetGame();
-        }
-
-        checkCollision();
-    }
-
-    requestAnimationFrame(gameLoop);
-}
-
-gameContainer.addEventListener('mousemove', movePaddle);
-gameLoop();
-
-    </script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
-
